trunk/Archive2/87/0feb3f70829361/output
+ gcc -std=c11 -O3 -Wall -Wextra -Wsign-compare -pedantic-errors main.cpp
cc1plus: warning: command line option '-std=c11' is valid for C/ObjC but not for C++ [enabled by default]
main.cpp: In function 'int main()':
main.cpp:8:21: warning: format '%p' expects argument of type 'void*', but argument 2 has type 'int*' [-Wformat=]
     printf("%p\n", k);
                     ^
main.cpp: In function 'void foo(int*)':
main.cpp:14:27: error: invalid conversion from 'void*' to 'int*' [-fpermissive]
     i = malloc(sizeof(int));
                           ^
